# Portable_Blind_Cloud_Storage

./: README.md
Myscheme/: CMakeLists.txt  main.cpp
Myscheme/Header/: Client.h  CloudServer.h  KeyGen.h  KeyRetrieve.h  KeyServer.h  PublicParam.h  Registration.h
Myscheme/Source/: Client.cpp  CloudServer.cpp  KeyGen.cpp  KeyRetrieve.cpp  KeyServer.cpp  PublicParam.cpp  Registration.cpp
PBCS/: CMakeLists.txt  main.cpp
PBCS/Header/: Client.h  CloudServer.h  Give.h  KeyServer.h  PublicParam.h  Registration.h  Take.h
PBCS/Source/: Client.cpp  CloudServer.cpp  Give.cpp  KeyServer.cpp  PublicParam.cpp  Registration.cpp  Take.cpp
PBCS/Store/: decryption.txt
PHE/: CMakeLists.txt  main.cpp
PHE/Header/: Client.h  CloudServer.h  Decryption.h  Encryption.h  KeyServer.h  PublicParam.h  Registration.h
PHE/Source/: Client.cpp  CloudServer.cpp  Decryption.cpp  Encryption.cpp  KeyServer.cpp  PublicParam.cpp  Registration.cpp
